<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="4dp"
    android:paddingEnd="4dp">

    <TextView
        android:id="@+id/tvGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/game_name"
        android:textColor="?attr/text_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvReaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/avg_reaction_time_value"
        android:textColor="?attr/text_dark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvAccuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/accuracy_value"
        android:textColor="?attr/text_dark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/total_points_value"
        android:textColor="?attr/text_dark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvBest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highest_score_value"
        android:textColor="?attr/text_dark"
        android:textSize="12sp" />

</LinearLayout>