<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/bg_rounded_card"
        android:layout_gravity="center"
        android:elevation="10dp">

        <Button
            android:id="@+id/btnResume"
            android:text="@string/continuee"
            android:drawableStart="@drawable/ic_play"
            android:textColor="@color/category_green_dark_mode"
            style="@style/PauseButton" />

        <Button
            android:id="@+id/btnRestart"
            android:text="@string/restart"
            android:drawableStart="@drawable/ic_restart"
            style="@style/PauseButton" />

        <Button
            android:id="@+id/btnHelp"
            android:text="@string/how_to_play"
            android:drawableStart="@drawable/ic_help"
            style="@style/PauseButton" />

        <Button
            android:id="@+id/btnExit"
            android:text="@string/leave"
            android:drawableStart="@drawable/ic_exit"
            style="@style/PauseButton" />
    </LinearLayout>
</FrameLayout>
